--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,46 @@
-Django==4.2.4                  # Django version you are using
-djangorestframework==3.14.0     # Django REST framework
-psycopg2-binary==2.9.9         # PostgreSQL adapter for Django
-dj-database-url==1.0.0         # Parse database URLs in Django settings
-django-cors-headers==3.14.0     # CORS middleware for Django
-
-# Machine learning libraries
-transformers==4.45.0            # Hugging Face transformers library for NLP
-torch==2.4.1                    # PyTorch for deep learning tasks (version based on your installation)
-
-# Utility libraries
-Pillow==10.0.0                  # Python Imaging Library (PIL fork, useful for image handling)
-gunicorn==20.1.0                # WSGI HTTP server for running Django in production
-
-# If you're deploying to Heroku or Render
-whitenoise==6.5.0               # For serving static files in production
+asgiref==3.8.1
+beautifulsoup4==4.12.3
+certifi==2024.7.4
+charset-normalizer==3.3.2
+dj-database-url==2.2.0
+Django==5.0.6
+django-cors-headers==4.4.0
+djangorestframework==3.15.1
+filelock==3.15.4
+frozendict==2.4.4
+fsspec==2024.6.1
+git-filter-repo==2.45.0
+html5lib==1.1
+huggingface-hub==0.24.6
+idna==3.7
+Jinja2==3.1.4
+lxml==5.3.0
+MarkupSafe==2.1.5
+mpmath==1.3.0
+multitasking==0.0.11
+networkx==3.3
+numpy==2.1.0
+packaging==24.1
+pandas==2.2.2
+peewee==3.17.6
+platformdirs==4.2.2
+psycopg2-binary==2.9.9
+python-dateutil==2.9.0.post0
+pytz==2024.1
+PyYAML==6.0.2
+regex==2024.7.24
+requests==2.32.3
+safetensors==0.4.4
+six==1.16.0
+soupsieve==2.6
+sqlparse==0.5.0
+sympy==1.13.2
+tokenizers==0.19.1
+torch==2.4.1
+tqdm==4.66.5
+transformers==4.44.2
+typing_extensions==4.12.0
+tzdata==2024.1
+urllib3==2.2.2
+webencodings==0.5.1
+yfinance==0.2.42
