--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ filelock==3.15.4
 frozendict==2.4.4
 fsspec==2024.6.1
 git-filter-repo==2.45.0
+gunicorn==23.0.0
 html5lib==1.1
 huggingface-hub==0.24.6
 idna==3.7
